Add GetUsers call with example users
